DELETE /contributions/{contributionID}
